--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -21,7 +21,7 @@
             
             <!-- Login Field (Username or Email) -->
             <div class="mb-3">
-                <label for="login" class="form-label">Username or Email ::)</label>
+                <label for="login" class="form-label">Username or Email</label>
                 <input type="text" id="login" name="login" class="form-control" placeholder="Enter your username or email" required>
             </div>
 
